--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -6,7 +6,6 @@
 }
 .places h1 {
 	font-size: 30px;
-	text-align: left;
 	width: 100%;
 	margin-bottom: 0;
 }
@@ -18,4 +17,8 @@
 	margin: 20px;
 	float: left;
 	text-align: center;
+}
+
+.places article h2 {
+	font-size: 30px;
 }
