--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,25 +1,24 @@
 .filters {
-	color: #FFFFFF;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-	display: flex;
-	justify-content: end;
-	align-items: center;
+        color: #fff;
+        height: 70px;
+        width: 100%;
+        border: 1px solid #ccc;
+        border-radius: 4px;
 }
 
 .filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFF;
-	height: 48px;
-	width: 20%;
-	border-radius: 4px;
-	border: none;
-	margin-right: 30px;
+        font-size: 18px;
+        background-color: #ff5a5f;
+        color: #fff;
+        height: 48px;
+        width: 20%;
+        border: none;
+        border-radius: 4px;
+        float: right;
+        transform: translateY(25%);
+        margin-right: 30px;
 }
 
-.filter button:hover {
-	opacity: 0.9;
+.filters button:hover {
+        opacity: 0.9;
 }
