--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,52 +1,59 @@
 .filters {
-	color: #FFFFFF;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-	overflow: hidden;
-}
-
-.filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFF;
-	height: 48px;
-	width: 20%;
-	border-radius: 4px;
-	border: none;
-	margin-right: 30px;
-	margin-top: 11px;
-	float: right;
-}
-
-.filters button:hover {
-	opacity: 0.9;
+        height: 70px;
+        width: 100%;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
 }
 
 .filters div:first-child {
-	border-right: 1px solid #DDD;
+        border-right: 1px solid #ccc;
 }
 
 .filters .locations,
 .filters .amenities {
-	float: left;
-	color: #484848;
-	height: 100%;
-	width: 25%;
+        width: 25%;
+        height: 100%;
+}
+
+.filters .locations {
+        margin-right: 0;
+}
+
+.filters .amenities {
+        margin-right: auto;
 }
 
 .filters .locations h3,
 .filters .amenities h3 {
-	font-weight: 600;
-	margin-left: 15%;
-	margin-bottom: 0;
+        margin-bottom: 0;
+        margin-left: 15%;
+        font-weight: 600;
 }
 
 .filters .locations h4,
 .filters .amenities h4 {
         font-weight: 400;
-	font-size: 14px;
-	margin-left: 15%;
-	margin-top :0;
+        margin-top: 0;
+        margin-left: 15%;
+}
+
+.filters button {
+        font-size: 18px;
+        background-color: #ff5a5f;
+        color: #fff;
+        height: 48px;
+        width: 20%;
+        border: none;
+        border-radius: 4px;
+        float: right;
+        margin-right: 30px;
+        display: block;
+}
+
+.filters button:hover {
+        opacity: 0.9;
 }
