--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,89 +1,98 @@
 .filters {
-	color: #FFFFFF;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-}
-
-.filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFF;
-	height: 48px;
-	width: 20%;
-	border-radius: 4px;
-	border: none;
-	margin-right: 30px;
-	margin-top: 11px;
-	float: right;
-}
-
-.filters button:hover {
-	opacity: 0.9;
+        height: 70px;
+        width: 100%;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
 }
 
 .filters div:first-child {
-	border-right: 1px solid #DDD;
+        border-right: 1px solid #ccc;
 }
 
 .filters .locations,
 .filters .amenities {
-	float: left;
-	color: #484848;
-	height: 100%;
-	width: 25%;
+        width: 25%;
+        height: 100%;
+}
+
+.filters .locations {
+        margin-right: 0;
+}
+
+.filters .amenities {
+        margin-right: auto;
 }
 
 .filters .locations h3,
 .filters .amenities h3 {
-	font-weight: 600;
-	margin-left: 15%;
-	margin-bottom: 0;
+        margin-bottom: 0;
+        margin-left: 15%;
+        font-weight: 600;
 }
 
 .filters .locations h4,
 .filters .amenities h4 {
         font-weight: 400;
-	font-size: 14px;
-	margin-left: 15%;
-	margin-top :0;
+        margin-top: 0;
+        margin-left: 15%;
 }
 
-.filters .locations .popover ,
-.filters .amenities .popover{
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	padding-top: 10%;
-	padding-bottom: 10%;
-	border-radius: 4px;
-	border: 1px solid #DDD;
-	margin-top: -2px;
+.filters .popover {
+        background-color: #fafafa;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        list-style: none;
+        padding-left: 10%;
+        padding-top: 15%;
+        padding-bottom: 10%;
+        display: none;
 }
 
 .filters .locations:hover .popover,
 .filters .amenities:hover .popover {
-	display: block;
-	cursor: pointer;
-	position: relative;
+        display: block;
 }
-
 .filters .locations .popover {
-	margin-right: -1px;
+        padding-bottom: 5%;
+}
+.filters .locations .popover > li {
+        margin-bottom: 10%;
 }
 
 .filters .amenities .popover {
-	margin-left: -1px;
+        padding-left: 20%;
 }
 
-.filters .locations .popover li h2 {
-	font-size: 16px;
-	margin-bottom: 0;
+.filters .popover h2 {
+        font-size: 16px;
+        display: inline-block;
+        margin-bottom: 0;
+        margin-top: 0;
 }
 
-.filters .locations .popover li ul {
-	padding-left: 10%;
-	list-style-type: none;
+.filters .locations .popover ul {
+        list-style: none;
+        margin-bottom: 5%;
+        padding-left: 7%;
 }
 
+.filters button {
+        font-size: 18px;
+        background-color: #ff5a5f;
+        color: #fff;
+        height: 48px;
+        width: 20%;
+        border: none;
+        border-radius: 4px;
+        float: right;
+        margin-right: 30px;
+        display: block;
+}
+
+.filters button:hover {
+        opacity: 0.9;
+}
