--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,24 +1,20 @@
 .places {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	align-items: start;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
 }
 .places h1 {
-	font-size: 30px;
-	width: 100%;
-	margin-bottom: 0;
-}
-.places article {
-	width: 390px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-	padding: 20px;
-	margin: 20px;
-	float: left;
-	text-align: center;
+        font-size: 30px;
+        width: 100%;
+        padding-left: 1%;
 }
 
-.places article h2 {
-	font-size: 30px;
+.places article {
+        border: 1px solid #ff5a5f;
+        width: 390px;
+        padding: 20px;
+        margin: 20px;
+        text-align: center;
+        border-radius: 4px;
 }
